--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Greeting Form</h2>
-    <form action="../backend/greet.php" method="POST">
+    <form action="greet.php" method="POST">
         <input type="text" name="username" placeholder="Enter your name" required>
         <button type="submit">Greet Me</button>
     </form>
